Fix Picture Wrap
- prevent image from showing below contact form on smaller computers

--- a/css/contact.css
+++ b/css/contact.css
@@ -106,6 +106,7 @@ h1 {
 
 .contact_split {
     display: flex;
+    flex-shrink: 0;
     flex-direction: row;
     align-items: center;
     justify-content: center;
